feat(swagger): add swagger for auth and topup
